<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_search"
        android:orderInCategory="0"
        app:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"
        android:title="@string/movie_search">
    </item>

    <item
        android:id="@+id/next_action"
        android:title="@string/next_action"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:icon="@drawable/ic_done"/>

    <item
        android:id="@+id/refresh_action"
        android:orderInCategory="2"
        android:title="@string/refresh_action"
        app:showAsAction="never"/>

    <item
        android:id="@+id/admin_action"
        android:orderInCategory="3"
        android:title="@string/management_action"
        app:showAsAction="never"/>
    <!--<item-->
        <!--android:orderInCategory="2"-->
        <!--android:id="@+id/back_action"-->
        <!--android:title="@string/back_action"-->
        <!--app:showAsAction="always"-->
        <!--android:icon="@drawable/ic_left_arrow_holo_dark"-->
        <!--android:visible="false"/>-->




</menu>
