<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:orientation="vertical"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:padding="10dp"
              android:background="@color/viewBg"
              android:weightSum="1">

    <TextView
        android:id="@+id/tv_add_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:layout_weight="0"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage"
                    android:hint="@string/movie_name_hint"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/add_item_details_field"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_gravity="start"
                    android:id="@+id/iv_choose_movie_picture"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_photo"
                    android:contentDescription="@string/movie_picture"/>
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/tv_imageName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="FAKE NAME"/>
            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:hint="@string/director_hint"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/add_item_details_field"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_actors"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:textSize="@dimen/add_item_details_field"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/email"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_duration"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:textSize="@dimen/add_item_details_field"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/duration_hint"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_genres"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:textSize="@dimen/add_item_details_field"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/genres_hint"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_release_date"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_release_date"
                    android:textSize="@dimen/add_item_details_field"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/release_date_hint"
                    android:inputType="date"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_description"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:textSize="@dimen/add_item_details_field"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/description_hint"
                    android:inputType="textMultiLine"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_add_movie"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/add_movie_btn"
        android:layout_weight="0"/>

</LinearLayout>



