<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants">
    <LinearLayout android:layout_height="match_parent"
                  android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:padding="10dp"
                  android:background="@color/viewBg"
                  android:weightSum="1">

        <TextView
            android:id="@+id/tv_purchase_summery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:layout_weight="0"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:inputType="textPersonName"
                        android:hint="@string/last_name"
                        android:textSize="@dimen/purchase_details_field"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_given_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:hint="@string/given_name"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/purchase_details_field"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_email"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:textSize="@dimen/purchase_details_field"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_phone"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:textSize="@dimen/purchase_details_field"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/phone_number"
                        android:inputType="phone"/>
                </android.support.design.widget.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_card_number"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:textSize="@dimen/purchase_details_field"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/card_number"
                        android:inputType="number"
                        android:maxLength="16"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_card_expiration"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:inputType="date"
                        android:hint="@string/card_expiration"
                        android:textSize="@dimen/purchase_details_field"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </ScrollView>
        <Button
            android:id="@+id/btn_purchase"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/purchase_confirm"
            android:layout_weight="0"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>


