<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:padding="10dp"
              android:background="@color/viewBg"
              android:weightSum="1"
              xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_add_hall_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:layout_weight="0"
        android:text="Add Hall - Details:"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_hall_id"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:textSize="@dimen/add_item_details_field"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/hall_id_hint"
                    android:maxLength="2"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_hall_rows_num"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:textSize="@dimen/add_item_details_field"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/rows_count_hint"
                    android:maxLength="2"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_hall_seats_in_row"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:textSize="@dimen/add_item_details_field"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/seat_count_hint"
                    android:maxLength="2"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_add_hall"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/add_hall_btn"
        android:layout_weight="0"/>

</LinearLayout>
